--- a/readme
+++ b/readme
@@ -1,2 +1,6 @@
+Бот Филин умееет подтверждать.
+    Если его попросить что-то подтвердить, то он должен это подтвердить.
+    Или не подтвердить.
+
 Для запуска бота использовать комманду: 
 	python thefilinbot.py 
